# mini-job

./: .env.tpl  .gitignore  CLAUDE.md  README.md  flake.nix  justfile  pyproject.toml
nix/: darwin.nix
scripts/: run.sh  store_op_token.sh
src/job/: config.py  main.py
tests/: test_main.py
